--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
     margin: 20px 0%;
     display: inline-flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .item-name {
