Доработка выполненных дел +  фикс кнопок

--- a/style.css
+++ b/style.css
@@ -49,3 +49,9 @@
 .completed {
     text-decoration: line-through;
 }
+.odds_color {
+    background-color: #ADFF2F;
+}
+.even_color {
+    background-color: #AA0000;
+}
